fix: enlarge input object size, hope to experience better on mobile devices

--- a/001_National_Old_age_Pension_Benefits/style.css
+++ b/001_National_Old_age_Pension_Benefits/style.css
@@ -24,16 +24,16 @@ body {
 
 
 .small-input {
-  width: 40px;
-  height: 20px;
+  width: 60px;
+  height: 30px;
   padding: 2px 5px;
-  font-size: 12px; /* Shrinks the text inside too */
+  font-size: 18px; /* Shrinks the text inside too */
 }
 
 .default-input {
   background-color: #f4efea;
-  width: 40px;
-  height: 20px;
+  width: 60px;
+  height: 30px;
   padding: 2px 5px;
-  font-size: 10px; /* Shrinks the text inside too */
+  font-size: 15px; /* Shrinks the text inside too */
 }
